--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ events {
 
 http {
   server {
-    server_name 192.168.2.194;
+    server_name "IP_oder_Hostname_des_Servers";
 
     location /web1 {
       proxy_pass http://172.28.1.3:80/;
