--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
       proxy_pass http://172.28.1.4:80/;
     }
     
-   location /web3/ {
+   location /web3 {
       proxy_pass http://172.28.1.5:80/;
     }
   }
