--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
       - 8080:80
+    restart: always
     networks:
         testing_net:
             ipv4_address: 172.28.1.2
@@ -18,6 +19,7 @@ services:
       - ./http1/index.html:/usr/local/apache2/htdocs/index.html
     expose:
       - "80"
+    restart: always
     depends_on:
       - nginx
     networks:
@@ -31,6 +33,7 @@ services:
       - ./http2/index.html:/usr/local/apache2/htdocs/index.html
     expose:
       - "80"
+    restart: always
     depends_on:
       - Web_App_1
     networks:
@@ -44,6 +47,7 @@ services:
       - ./http3/index.html:/var/www/html/index.html
     expose:
       - "80"
+    restart: always
     networks:
         testing_net:
             ipv4_address: 172.28.1.5
